# BudgetBuddyBackend

./: .flaskenv  .gitignore  Procfile  README.md  app.db  config.py  email_service.py  fetch_payments.py  fetch_payments_wrappper.py  former_test.py  main.py  notify_card_holder.py  notify_card_holder_wrapper.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  scheduled_budget_check.py  test.py  test_sendgrid.py  test_unusual_spending.py
api/: requirements.txt  run.py  runtime.txt  scheduled_budget_check.py  t of roles
api/app/: __init__.py  models.py  payment_entry_endpoints.py
api/app/api/: auth.py  payment_category.py  payment_entry.py  users.py
api/app/api/services/: budget_monitor_service.py  payment_entry_service.py  user_service.py
api/app/services/: budget_monitor_service.py  email_service.py  user_service.py
api/app/tests/: test_budget_monitor.py  test_payment_entries.py  test_unusual_spending.py  test_user.py
api/instance/: test_database.db
app/: __init__.py  auth.py  config.py  models.py  user_endpoints.py
app/api/: auth.py  payment_category.py  payment_entry.py  payments.py  users.py
app/api/services/: budget_monitor_service.py  email_service.py  payment_category_service.py  payment_entry_service.py  user_service.py
app/services/: budget_monitor_service.py  payment_entry_service.py
app/tests/: test_budget_monitor.py  test_database.py  test_endpoints.py  test_payment_entries.py  test_unusual_spending.py  test_user.py
frontend/: package-lock.json  package.json
frontend/public/: Linda-Njau (1).odg  mysql-installer-web-community-8.0.34.0.msi
frontend/src/: App.css  App.js  FormStyles.css  Login.css  Login.js  LogoutButton.js  PaymentEntriesList.js  PaymentEntry.js  SignUp.js  UserCreation.js  UserSignUp.js  httpService.js  paymententry.css  styles.css  withAuth.js
instance/: test_database.db
migrations/versions/: 3cb7f368db29_payment_entry_table_added_updated_at_.py  5eb676115ce5_.py
public/: index.html
