[tool.poetry]
name = "unusual-spending"
version = "0.1.0"
description = ""
authors = ["Linda-Njau <lindanjau21@gmail.com>"]
readme = "README.md"
packages = [{include = "unusual_spending"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
Werkzeug = "^2.3.7"
flask-migrate = "^4.0.4"
mysql-connector-python = "^8.0.27"
sendgrid = "^6.10.0"
flask-cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
