[tool.poetry]
name = "unusual-spending"
version = "0.1.0"
description = ""
authors = ["Linda-Njau <lindanjau21@gmail.com>"]
readme = "README.md"
packages = [{include = "unusual_spending"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask-SQLAlchemy = "^3.0.5"
Werkzeug = "^2.0.1"
flask-migrate = "^4.0.4"
mysql-connector-python = "^8.0.27"
sendgrid = "^6.10.0"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.5.2"
flask-crontab = "^0.1.2"
flask-apscheduler = "^1.13.0"
flask = "2.3.3"
flask-api = "^3.1"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
